--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.x.x",
+    "@supabase/supabase-js": "^2.90.1",
     "axios": "^1.12.2",
     "bcryptjs": "^2.x.x",
     "dotenv": "^16.x.x",
