--- a/render.yaml
+++ b/render.yaml
@@ -20,3 +20,15 @@ services:
         sync: false
       - key: DIRECT_DATABASE_URL
         sync: false
+      - key: MIGRATE_USE_DIRECT
+        value: true
+      - key: SUPABASE_URL
+        sync: false
+      - key: SUPABASE_ANON_KEY
+        sync: false
+      - key: SUPABASE_SERVICE_ROLE_KEY
+        sync: false
+      - key: GOOGLE_CLIENT_ID
+        sync: false
+      - key: GOOGLE_CLIENT_SECRET
+        sync: false
