fix: remove migration from render deploy (run locally)

--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     plan: free
     rootDirectory: api # ESSA LINHA É CRÍTICA E DEVE ESTAR PRESENTE
-    buildCommand: "npm install --production=false && npm run build && npm run migrate"
+    buildCommand: "npm install --production=false && npm run build"
     startCommand: "npm start" # Ou "node -r tsconfig-paths/register dist/server.js" se preferir explicitar
     healthCheckPath: /api/diag
     envVars:
