--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.90.1",
+    "@tanstack/react-query": "^5.90.20",
+    "@tanstack/react-query-devtools": "^5.91.2",
     "axios": "^1.7.2",
     "jose": "^5.6.3",
     "jspdf": "^2.5.2",
