--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "dev:5174": "vite --port 5174",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "jest --no-watch",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "cypress:run": "cypress run",
     "test:e2e": "start-server-and-test dev http://localhost:5173 cypress:run"
   },
@@ -35,9 +36,9 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.8",
-    "@testing-library/react": "^16.0.0",
-    "@testing-library/user-event": "^14.5.2",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -45,7 +46,8 @@
     "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^4.7.0",
+    "@vitest/ui": "^4.0.18",
     "autoprefixer": "^10.4.19",
     "cypress": "^13.13.1",
     "eslint": "^8.57.0",
@@ -53,12 +55,16 @@
     "eslint-plugin-react-refresh": "^0.4.8",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^20.0.3",
     "postcss": "^8.4.39",
     "start-server-and-test": "^2.0.5",
     "tailwindcss": "^3.4.6",
     "ts-jest": "^29.2.3",
     "typescript": "^5.5.4",
     "vite": "^5.3.5",
-    "vite-plugin-pwa": "^1.1.0"
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-pwa": "^1.1.0",
+    "vitest": "^4.0.18",
+    "vitest-canvas-mock": "^1.1.3"
   }
 }
